<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboPad</string>
    <string name="settings">Settings</string>

    <string name="title_activity_select_robot">SelectRobotActivity</string>

    <string name="pollywog">Pollywog</string>
    <string name="beetle">Beetle</string>
    <string name="rhino">Rhino</string>
    <string name="crab">Crab</string>
    <string name="generic_robot">Generic robot</string>

    <string name="exit_robot_control_dialog">The connection with this robot will be lost, do you really want to choose a new type of robot?</string>
    <string name="exit_robot_control_dialog_title">Disconnect the robot</string>

    <!-- Rhino robot -->
    <string name="charge">Charge</string>

    <!-- Crab robot -->
    <string name="step_size">Size of steps </string>
    <string name="left_amplitude">Left amplitude: </string>
    <string name="right_amplitude">Right amplitude: </string>
    <string name="speed">Speed</string>
    <string name="period">Period:</string>
    <string name="legs_coordination">"Coordination\nbetween legs"</string>
    <string name="phase_difference">Phase difference: </string>
    <string name="reset">Reset</string>
    <string name="default_amplitude">20</string>
    <string name="default_period">2000</string>
    <string name="default_phase">-90</string>

    <!-- Generic robot -->
    <string name="command_1">1</string>
    <string name="command_2">2</string>
    <string name="command_3">3</string>
    <string name="command_4">4</string>
    <string name="command_5">5</string>
    <string name="command_6">6</string>

    <!-- Tips -->
    <string name="pin_explanation_tip_text">If you click on me, I will show you how to connect my pins</string>
    <string name="bluetooth_tip_text">If you click on me, I will connect or disconnect with the robot</string>
    <string name="pad_tip_text">If you click on us, we will control the robot</string>
    <string name="claws_tip_text">If you click on us, we will control\nthe claws of the robot</string>
    <string name="line_follower_text">If you click on me, I will enable or disable the line follower mode</string>
    <string name="light_avoider_text">If you click on me, I will enable or disable the light avoider mode</string>
    <string name="obstacles_avoider_text">If you click on me, I will enable or disable the obstacles avoider mode</string>

    <!--Permissions-->
    <string name="permission_location">Location permission is needed to search for the robots near you to connect to them</string>
    <string name="rationale_location">Location permission is needed to search for the robots near you to connect to them.
        You will only be able to connect to paired robots</string>

</resources>
