<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/controls_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pollywog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/menu_pollywog_printbot" />

            <Button
                android:id="@+id/beetle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_green_selector"
                android:drawableTop="@drawable/bot_beetle"
                android:text="@string/beetle"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rhino_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_green_selector"
                android:drawableTop="@drawable/bot_rhino"
                android:text="@string/rhino"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/crab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_green_selector"
                android:drawableTop="@drawable/bot_crab"
                android:text="@string/crab"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/generic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_green_selector"
                android:drawableTop="@drawable/bot_generic"
                android:text="@string/generic_robot"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>